changed eventIds to be in a 24 hour clock

--- a/index.html
+++ b/index.html
@@ -38,16 +38,14 @@
         <div class="container">
             <form class="text-center">
                 <div class="row mb-3 custom-no-margin" id="9-slot">
-                    <hr class="custom-hr custom-no-margin">
-                    <label for="9AM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>9AM</p></label>
+                    <label for="10AM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>9AM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event9" class="form-control custom-text-area" rows="3"></textarea>
                     </div>
                     <button class='col-sm-10 col-lg-1 custom-btn' id="event9-btn">Save</button>
                     <hr class="custom-hr custom-no-margin">
                 </div>
-              </form>
-              <form>
+
                 <div class="row mb-3 custom-no-margin" id="10-slot">
                     <label for="10AM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>10AM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
@@ -56,7 +54,7 @@
                     <button class='col-sm-10 col-lg-1 custom-btn' id="event10-btn">Save</button>
                     <hr class="custom-hr custom-no-margin">
                 </div>
-              </form>
+
                 <div class="row mb-3 custom-no-margin" id="11-slot">
                     <label for="11AM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>11PM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
@@ -66,7 +64,7 @@
                     <hr class="custom-hr custom-no-margin">
                 </div>
 
-                <div class="row mb-3 custom-no-margin" id="">
+                <div class="row mb-3 custom-no-margin" id="12-slot">
                     <label for="12PM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>12PM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event12" class="form-control custom-text-area" rows="3"></textarea>
@@ -75,7 +73,7 @@
                     <hr class="custom-hr custom-no-margin">
                 </div>
 
-                <div class="row mb-3 custom-no-margin" id="">
+                <div class="row mb-3 custom-no-margin" id="13-slot">
                     <label for="1PM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>1PM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event13" class="form-control custom-text-area" rows="3"></textarea>
@@ -84,7 +82,7 @@
                     <hr class="custom-hr custom-no-margin">
                 </div>
 
-                <div class="row mb-3 custom-no-margin" id="">
+                <div class="row mb-3 custom-no-margin" id="14-slot">
                     <label for="2PM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>2PM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event14" class="form-control custom-text-area" rows="3"></textarea>
@@ -93,7 +91,7 @@
                     <hr class="custom-hr custom-no-margin">
                 </div>
 
-                <div class="row mb-3 custom-no-margin" id="">
+                <div class="row mb-3 custom-no-margin" id="15-slot">
                     <label for="3PM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>3PM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event15" class="form-control custom-text-area" rows="3"></textarea>
@@ -102,7 +100,7 @@
                     <hr class="custom-hr custom-no-margin">
                 </div>
 
-                <div class="row mb-3 custom-no-margin" id="">
+                <div class="row mb-3 custom-no-margin" id="16-slot">
                     <label for="4PM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>4PM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event16" class="form-control custom-text-area" rows="3"></textarea>
@@ -111,7 +109,7 @@
                     <hr class="custom-hr custom-no-margin">
                 </div>
 
-                <div class="row mb-3 custom-no-margin" id="">
+                <div class="row mb-3 custom-no-margin" id="17-slot">
                     <label for="5PM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>5PM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event17" class="form-control custom-text-area" rows="3"></textarea>
@@ -119,7 +117,6 @@
                     <button class='col-sm-10 col-lg-1 custom-btn' id="event17-btn">Save</button>
                     <hr class="custom-hr custom-no-margin">
                 </div>
-
             </form>
         </div>
       </main>
