Cleaned up some HTML and formatting

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <div class="container">
             <form class="text-center">
                 <div class="row mb-3 custom-no-margin" id="9-slot">
-                    <label for="10AM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>9AM</p></label>
+                  <hr class="custom-hr custom-no-margin">
+                    <label for="9AM" class="col-sm-2 col-lg-1 col-form-label custom-text-right"><p><br>9AM</p></label>
                     <div class="col-sm-10 col-lg-9 custom-no-padding-right">
                       <textarea id="event9" class="form-control custom-text-area" rows="3"></textarea>
                     </div>
